--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: tailwind
-description: "A simple tailwind utility library."
-version: 0.0.1
-homepage: https://github.com/codingmitra/tailwind.git
+description: "A simple Tailwind utility library for Flutter, enabling quick and efficient UI building with utility-first classes, making it easier to create clean and responsive designs."
+version: 0.0.2
+homepage: https://github.com/codingmitra/tailwind
+repository: https://github.com/codingmitra/tailwind
+issue_tracker: https://github.com/codingmitra/tailwind/issues
 
 environment:
   sdk: ^3.5.3
@@ -16,39 +18,13 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/to/asset-from-package
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
+funding:
+  - https://buymeacoffee.com/hirokbanik
 
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/to/font-from-package
+topics:
+  - tailwind
+  - colors
+  - utilities
+  - widget
