--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tailwind
 description: "A simple Tailwind utility library for Flutter, enabling quick and efficient UI building with utility-first classes, making it easier to create clean and responsive designs."
 version: 0.0.2
-publish_to: 'pub.dev'
+publish_to: pub.dev
 homepage: https://github.com/codingmitra/tailwind
 repository: https://github.com/codingmitra/tailwind
 issue_tracker: https://github.com/codingmitra/tailwind/issues
